Fixed more things on mobile

--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -34,7 +34,7 @@
   }
 
   .about {
-    height:800px;
+    height:900px;
   }
 
   .support-icons {
@@ -61,7 +61,7 @@
   }
 
   .hospital {
-    min-height:800px;
+    min-height:1000px;
   }
   .sign-up {
     margin-top:30px;
@@ -125,15 +125,13 @@
   }
 }
 
-/*
-@media(max-width: 550px) {
-  .img,
-  .banner {
-    height:20vh;
-    position:relative;
+
+@media(max-width: 320px) {
+ .bay-bash .icon-BB {
+    font-size:4em;
   }
 }
-
+/*
 // iPhone media queries
 // portrait
 @media only screen
